--- a/app.json
+++ b/app.json
@@ -17,7 +17,7 @@
   "SUDO": {
    "description": "SUDO NUMBERS",
    "required": true,
-   "value": "2348039607375,2349027862116"
+   "value": "2347081414294"
   },
   "AUTHOR": {
    "description": "STICKER AUTHOR",
